fix overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -254,7 +254,7 @@ html {
 .button {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #ffb6c1; /* Accent color */
+  background-color: #aaaaaa; /* Accent color */
   color: black;
   text-decoration: none;
   border-radius: 25px;
